# cruxoflife

./: Cargo.toml  README.md  flake.nix
Android/: .gitignore
Android/app/: build.gradle
Android/app/src/androidTest/java/com/example/cruxoflife/: ExampleInstrumentedTest.kt
Android/app/src/androidTest/java/com/glennwso/cruxoflife/: ExampleInstrumentedTest.kt
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/example/counter/: Core.kt  MainActivity.kt
Android/app/src/main/java/com/example/cruxoflife/: Core.kt  MainActivity.kt  http.kt
Android/app/src/main/java/com/example/cruxoflife/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/java/com/glennwso/cruxoflife/: Core.kt  MainActivity.kt  http.kt
Android/app/src/main/res/values/: strings.xml
Android/app/src/test/java/com/example/cruxoflife/: ExampleUnitTest.kt
Android/app/src/test/java/com/glennwso/cruxoflife/: ExampleUnitTest.kt
Android/shared/: build.gradle
Android/shared/src/androidTest/java/com/example/cruxoflife/shared/: ExampleInstrumentedTest.kt
Android/shared/src/androidTest/java/com/glennwso/cruxoflife/shared/: ExampleInstrumentedTest.kt
Android/shared/src/test/java/com/example/cruxoflife/shared/: ExampleUnitTest.kt
Android/shared/src/test/java/com/glennwso/cruxoflife/shared/: ExampleUnitTest.kt
shared/: Cargo.toml  init_life.json  uniffi.toml
shared/src/: app.rs  lib.rs
shared/src/app/: capabilities.rs  caps.rs  mod.rs
shared_types/: build.rs
web-leptos/: Cargo.toml  index.html
web-leptos/src/: core.rs  hello.js  lib.rs  main.rs
(+3 files in other folders)
