[package]
name = "shared"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "shared"

[features]
typegen = ["crux_core/typegen"]

[dependencies]
cgmath = { version = "0.18.0", features = ["serde", "swizzle"] }
crux_core= { workspace=true, features = ["typegen"] }
serde = { workspace = true, features = ["derive"] }
lazy_static = "1.5.0"
uniffi = "0.28.2"
# log = {workspace=true}
wasm-bindgen = "0.2.95"
chrono = { version = "0.4.38", features = ["serde"] }
crux_http = "0.10.3"
insta = { version = "1.41.1", features = ["ron", "json"] }
serde_json = "1.0.133"

[target.uniffi-bindgen.dependencies]
uniffi = { version = "0.28.2", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28.2", features = ["build"] }
